# FlexSquashFiles

./: .gitignore  CLI.md  CMakeLists.txt  README.md  imgviewer.pro  main.cpp
cli/: CLI.md  core_routines.cpp  core_routines.hpp  iterators.hpp  main.cpp  qt_file_utils.cpp  qt_file_utils.hpp
doc/: specification.md
interface/: CMakeLists.txt
interface/cli/: CLI.md  main.cpp
interface/gui/: main.cpp
interface/shared/: core_routines.cpp  core_routines.hpp  qt_file_utils.hpp
lib/: CMakeLists.txt
lib/FxSF/: Archive.cpp  Archive.hpp  ArchiveConstructor.cpp  ArchiveConstructor.hpp  ArchiveInternal.hpp  checksum.cpp  checksum.hpp  zstd++.cpp  zstd++.hpp
